# CastAgent

./: .gitignore  M2Plus.jks  README.md  build.gradle  local.properties  public.libraries.txt  setEve.bat
app/: .gitignore  build-for-justjava.gradle  build.gradle
app/src/androidTest/java/com/ex/unisen/cast/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: app-config
app/src/main/cpp/: CMakeLists-for-libexcast.txt  CMakeLists.txt  native-lib.cpp  native-lib.h  ndk-stl-config.cmake
app/src/main/cpp/dlna/: CallbackTypes.h  DLNAController.cpp  DLNAController.h  DLNAServer.cpp  DLNAServer.h  MediaRenderer.cpp  MediaRenderer.h
app/src/main/cpp/dlna/Neptune/Core/: NptLogging.cpp
app/src/main/cpp/dlna/Neptune/Data/TLS/: NptTlsDefaultTrustAnchorsBase.cpp  NptTlsDefaultTrustAnchorsExtended.cpp
app/src/main/cpp/dlna/Neptune/System/Android/: NptAndroidConsole.cpp  NptAndroidDebug.cpp  NptAndroidFile.cpp  NptAndroidLogConfig.cpp
app/src/main/cpp/dlna/Neptune/System/Bsd/: NptBsdBlockerSocket.h  NptBsdNetwork.cpp  NptBsdResolver.cpp  NptBsdSockets.cpp
app/src/main/cpp/dlna/Neptune/System/Null/: NptNullAutoreleasePool.cpp  NptNullSerialPort.cpp
app/src/main/cpp/dlna/Neptune/System/Posix/: NptPosixDynamicLibraries.cpp  NptPosixEnvironment.cpp  NptPosixFile.cpp  NptPosixNetwork.cpp  NptPosixQueue.cpp  NptPosixSystem.cpp  NptPosixThreads.cpp  NptPosixTime.cpp  NptSelectableMessageQueue.cpp
app/src/main/cpp/dlna/Neptune/System/StdC/: NptStdcEnvironment.cpp
app/src/main/cpp/dlna/Platinum/Core/: PltAction.h  PltArgument.h  PltConstants.h  PltCtrlPoint.h  PltCtrlPointTask.h  PltDatagramStream.cpp  PltDatagramStream.h  PltDeviceData.cpp  PltDeviceData.h  PltDeviceHost.cpp  PltDeviceHost.h  PltEvent.h  PltHttp.h  PltHttpClientTask.h  PltHttpServer.h  PltHttpServerTask.h  PltIconsData.cpp  PltMimeType.h  PltProtocolInfo.h  PltService.h  PltSsdp.h  PltStateVariable.h  PltTaskManager.h  PltThreadTask.h  PltUPnP.cpp  PltUtilities.h
app/src/main/cpp/dlna/Platinum/Devices/MediaConnect/: PltMediaConnect.cpp  PltMediaConnect.h  PltXbox360.cpp  PltXbox360.h  X_MS_MediaReceiverRegistrarSCPD.cpp
app/src/main/cpp/dlna/Platinum/Devices/MediaRenderer/: AVTransportSCPD.cpp  PltMediaController.cpp  PltMediaController.h  PltMediaRenderer.cpp  PltMediaRenderer.h  RdrConnectionManagerSCPD.cpp  RenderingControlSCPD.cpp
app/src/main/cpp/dlna/Platinum/Devices/MediaServer/: ConnectionManagerSCPD.cpp  ContentDirectorySCPD.cpp  ContentDirectorywSearchSCPD.cpp  PltDidl.cpp  PltDidl.h  PltFileMediaServer.cpp  PltFileMediaServer.h  PltMediaBrowser.cpp  PltMediaBrowser.h  PltMediaCache.h  PltMediaItem.cpp  PltMediaItem.h  PltMediaServer.cpp  PltMediaServer.h  PltSyncMediaBrowser.h
app/src/main/cpp/dlna/Platinum/Extras/: PltDownloader.cpp  PltDownloader.h  PltFrameBuffer.h  PltFrameServer.cpp  PltFrameServer.h  PltFrameStream.h  PltMetadataHandler.h  PltRingBufferStream.cpp  PltRingBufferStream.h  PltStreamPump.cpp  PltStreamPump.h
app/src/main/java/com/ex/unisen/: AppContext.java
app/src/main/java/com/ex/unisen/activity/: MainActivity.java  VideoPlayerActivity.java
app/src/main/java/com/ex/unisen/cast/: AnimationUtil.java  AssistService.java  CastChangeReceiver.java  CastServer.java  CastThread.java  CommonUtil.java  Event.java  MediaModel.java  MediaModelFactory.java  MediaUtils.java  NetWorkChangReceiver.java  StartService.java  StartupReceiver.java  WifiDisplayService.java
app/src/main/java/com/ex/unisen/enu/: App.java
app/src/main/java/com/ex/unisen/model/: NALPacket.java  PCMPacket.java
app/src/main/java/com/ex/unisen/player/: AVPlayer.java  AudioPlayer.java  AudioTimestampPoller.java  AudioTrackPositionTracker.java  Constant.java  MediaCodecVideoRenderer.java  MediaTimeProvider.java  VideoFrameReleaseTimeHelper.java  VideoPlayer.java
app/src/main/java/com/ex/unisen/util/: Assertions.java  NetworkDetecting.java  Utils.java  WFD.java
app/src/main/java/eskit/sdk/support/messenger/: EsMessageUdpServer.java  EsMessenger.java  IEsMessenger.java
app/src/main/java/eskit/sdk/support/messenger/core/: AbstractUdpServer.java  AvailablePortFinder.java  Executors.java  UdpServerConfig.java
app/src/main/java/eskit/sdk/support/messenger/util/: EsUtils.java
app/src/main/res/layout/: activity_main.xml  activity_player.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
doc/: DLNAPACKAGE.md  TODO.md  说明.md
gradle/wrapper/: gradle-wrapper.properties
